--- a/css.css
+++ b/css.css
@@ -10,33 +10,21 @@
     align-items: flex-start;
     background: black;
     padding: 2%;
-    
-
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 .nav-link{
     color: white;
     text-decoration: none;
+    font-size: large;
 }
 
 .section{
     display: flex;
-    min-height: 90vh;
-    padding: 1%;
+    min-height: 70vh;
     flex-wrap: nowrap;
 }
-
-@media only screen and (max-width:768px){
-    .nav__container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background: black;
-        padding: 2%;
-}
-
-}
-
 .hero__container{
     display: flex;
     justify-content: center;
@@ -46,20 +34,15 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
-    
 }
-
 .hero-text{
     font-size: 3rem;
     color: white;
     text-shadow: 3px 3px black;
 }
-
-
 .about-me__container{
     display: flex;
-    align-items: center;
-    
+    align-items: center; 
 }
 .about-me-text{
     text-align: center;
@@ -70,48 +53,55 @@
 .about-me-img{
     width: 35%;
     height: auto;
-    border-radius:50%;
+    border-radius: 50%;
 }
-
-
 .technology__container{
     display: flex;
     justify-content: space-around;
-
 }
-
 .technology-img{
     width: 100%;
     height:auto;
-    padding:5%;
-    border-radius:50%;
+    padding: 0;
+    border-radius:10%;
+    border: solid 10px white;
 }
 .technology-text{
     text-align: center;
 }
 
 @media only screen and (max-width:768px){
-
     .about-me__container{
-        flex-direction: row-reverse;
+        flex-direction: column-reverse;
     }
     .technology__container{
-        display:flex;
         flex-direction: column;
         justify-content: center;
-        align-items:center;
-        
+        align-items:center; 
     }
     .technology__container-column{
         display:flex;
         justify-content: center;
         align-items: center;
         flex-direction: row;
-
+    }
+    .technology__container-column--reverse{
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row-reverse;
     }
     .technology-img{
-        width: 100%;
+        width: 60%;
+        margin: 10px;
         height:auto;
-        
     }
+    .nav__container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: black;
+        padding: 2%;
+}
 }
